# parliament_rl

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  config.py  extract_answer.py  patches.py  pyproject.toml  requirements.txt  run_batch.py  run_parliament.py  serve.py  test_verify.txt  visualize.py
.cursor/: memory.md
PRL-Prompts-from-Reinforcement-Learning/: README.md
PRL-Prompts-from-Reinforcement-Learning/datasets/original/: cr_infer.jsonl  cr_test.jsonl  cr_train.jsonl  cr_val.jsonl  mr_infer.jsonl  mr_test.jsonl  mr_val.jsonl  sim_infer.jsonl  sim_test.jsonl  sim_train.jsonl  sim_val.jsonl  sst-2_test.jsonl  sst5_test.jsonl  subj_infer.jsonl  subj_test.jsonl  sum_infer.jsonl  sum_test.jsonl  sum_train.jsonl  sum_val.jsonl  trec_infer.jsonl  trec_test.jsonl  trec_val.jsonl
PRL-Prompts-from-Reinforcement-Learning/datasets/original/sim/: gt_test.src
PRL-Prompts-from-Reinforcement-Learning/datasets/original/sum/: gt_test.src  gt_valid.src  test.src  valid.src
PRL-Prompts-from-Reinforcement-Learning/scripts/cr/: cr_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/mr/: mr_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/news/: news_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/sim/: sim_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/sst-2/: sst2_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/sst-5/: sst5_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/subj/: subj_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/sum/: sum_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/scripts/trec/: trec_qwen_qwen.sh
PRL-Prompts-from-Reinforcement-Learning/swift/llm/infer/: infer.py
PRL-Prompts-from-Reinforcement-Learning/swift/llm/infer/infer_engine/: pt_engine.py
PRL-Prompts-from-Reinforcement-Learning/swift/plugin/: orm.py
PRL-Prompts-from-Reinforcement-Learning/swift/trainers/rlhf_trainer/: grpo_trainer.py
baseline/: run_baseline.py
baseline_tools/: run_baseline_tools.py
benchmark/: gpqa_diamond.csv  gpqa_diamond_subset.csv
configs/: vllm_lb.conf
context_configs/2026_4_10_v1/: actor_prompt.txt  actor_skill.md  config.json  judge_prompt.txt
context_configs/2026_4_10_v2/: actor_prompt.txt  actor_skill.md  config.json  judge_prompt.txt  judge_skill.md  metrics.md
context_configs/2026_4_13_v3/: actor_prompt.txt  actor_skill.md  config.json  judge_prompt.txt  judge_skill.md  metrics.md
context_configs/2026_4_16_v1/: actor_prompt.txt  config.json  metrics.md
context_configs/2026_4_9_v1/: actor_prompt.txt  config.json  judge_prompt.txt  judge_skill.md  metrics.md
context_configs/2026_4_9_v2/: actor_prompt.txt  actor_skill.md  config.json  judge_prompt.txt  metrics.md
context_configs/2026_4_9_v3/: actor_prompt.txt  actor_skill.md  config.json  judge_skill.md  metrics.md
context_configs/Parliament_context/: actor_prompt.txt  actor_skill.md  config.json  judge_prompt.txt  judge_skill.md  notes.md
context_configs/RL_context/: config.json  notes.md  prompt_intro.txt
context_configs/Solo_context/: actor_prompt.txt  actor_skill.md  config.json  judge_prompt.txt  notes.md
context_configs/shared/: config.json  judge_prompt.txt  judge_skill.md
datasets/: echelle_optics.json  sciencepedia_heldout_mc100.json  sciencepedia_mini.json  sciencepedia_test.json
docs/: 00_naming.md  01_overview.md  02_parliament.md  03_rl.md  04_2x2_design.md  05_frame_eval.md  06_knobs.md
eval/: __init__.py  frame.py  frame_sweep.sh  gpqa.py  gpqa_sweep.sh  sciencepedia_mc.py  secretary.py
harness/: agent.py  prompts.py  runner.py  tools.py
judgement/: benchmark_viz.py  dataset.py  judge.py  launch_vllm.sh  run_baseline.py  run_benchmark.py  vllm_manager.py
parliament/: __init__.py  auth.py  config.py  context.py  patches.py  prompts.py  run_parliament.py  seed.py  serve.py  server.py  session.py  store.py  tools.py  visualize.py
parliament/experience/: __init__.py
parliament/static/: index.html
rl/: __init__.py  accelerate_ddp.yaml  accelerate_fsdp.yaml  export.py  extract.py  train.py  vote_ref_detector.py
scripts/: __init__.py  _common.py  eval_policy_on_shard.py  gpu_keepalive.py  install_skills.sh  iterate.py  launch_cell.sh  run.py  run_experiment.py  sample_dataset.py  status.py
scripts/harness/: agent.py  runner.py  tools.py
skills/actor/: SKILL.md
skills/judge/: SKILL.md
tests/: __init__.py  test_context_load.py  test_extract.py  test_iterate_idempotent.py  test_precompute_shard.py  test_secretary.py  test_vote_ref_detector.py
